--- a/src/static/index.css
+++ b/src/static/index.css
@@ -1,5 +1,5 @@
 #welcome {
-  background: linear-gradient(to right top, #6305dd, #390281);
+  background: linear-gradient(90deg, #355070 0%, #6d597a 100%);
   padding: 6rem 12%;
 }
 
