--- a/src/static/app.css
+++ b/src/static/app.css
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
-
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Open Sans', 'Lato', sans-serif;
+  font-family: "Open Sans", "Lato", sans-serif;
 }
 
 body {
@@ -15,8 +13,10 @@ body {
 h1,
 h2,
 h3 {
-  font-family: 'Lato', sans-serif;
-  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 2rem;
 }
 
 #main-navigation {
@@ -25,7 +25,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10%;
+  padding: 0 5%;
   position: absolute;
   top: 0;
   left: 0;
@@ -34,15 +34,37 @@ h3 {
 #main-navigation a {
   text-decoration: none;
   color: white;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 #main-navigation a:hover,
 #main-navigation a:active {
-  color: #cf79f1;
+  color: #cdb7d6;
 }
 
 #main-navigation h1 a:hover,
 #main-navigation h1 a:active {
   color: white;
+}
+
+/* Mobile view */
+@media (max-width: 767px) {
+  #main-navigation {
+    padding: 0 2%;
+  }
+
+  #main-navigation h1 {
+    font-size: 1.5rem;
+  }
+}
+
+/* Tablet view */
+@media (min-width: 768px) and (max-width: 1023px) {
+  #main-navigation {
+    padding: 0 5%;
+  }
+
+  #main-navigation h1 {
+    font-size: 1.8rem;
+  }
 }
