--- a/src/static/index.css
+++ b/src/static/index.css
@@ -7,6 +7,7 @@
   display: flex;
   align-items: flex-start;
   margin: 3rem auto;
+  position: relative;
 }
 
 #welcome img {
@@ -14,9 +15,10 @@
   height: 10rem;
   object-fit: cover;
   object-position: top;
-  border: 5px solid white;
-  border-radius: 12px;
-  background-color: #ffe1bf;
+  border: 3px solid #7b4372;
+  /* border-radius: 12px; */
+  border-radius: 50%;
+  background-color: #6d597a;
   transform: rotateZ(-5deg);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }
@@ -24,13 +26,15 @@
 #welcome h2 {
   font-size: 3.5rem;
   margin: 0 0 0 2rem;
-  color: #e4e4e4;
+  color: #cdb7d6;
   width: 10rem;
+  font-weight: 400;
 }
 
 #welcome p {
-  color: white;
+  color: #cdb7d6;
   font-size: 1.5rem;
+  font-weight: 300;
 }
 
 #latest-posts {
@@ -44,6 +48,8 @@
 
 #latest-posts h2 {
   text-align: center;
+  color: hsl(317, 67%, 37%);
+  font-weight: 400;
 }
 
 #latest-posts ul {
@@ -61,15 +67,92 @@
 #about {
   text-align: center;
   padding: 3rem;
-  background-color: #e48900;
+  background: linear-gradient(90deg, #9eb6d5 0%, #bfa1c0 100%);
   margin-top: 5rem;
 }
 
 #about h2 {
-  font-size: 3rem;
+  font-size: 2rem;
+  font-weight: 400;
 }
 
 #about p {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: #353535;
+  font-weight: 300;
+}
+
+@media (max-width: 767px) {
+  #welcome {
+    padding: 2rem 4%;
+  }
+
+  #welcome img {
+    width: 6rem;
+    height: 6rem;
+    margin-right: 2rem;
+  }
+
+  #welcome h2 {
+    font-size: 1.2rem;
+    margin: 1rem 0;
+  }
+
+  #welcome p {
+    font-size: 1rem;
+  }
+
+  #latest-posts {
+    padding: 1rem;
+    width: 100%;
+    margin: 2rem 0;
+  }
+
+  #latest-posts h2 {
+    font-size: 1.5rem;
+  }
+
+  #latest-posts ul {
+    gap: 0.5rem;
+  }
+
+  #about {
+    padding: 1rem;
+    margin-top: 2rem;
+  }
+
+  #about h2 {
+    font-size: 1.2rem;
+  }
+}
+
+/* Tablet view */
+@media (min-width: 768px) and (max-width: 1023px) {
+  #welcome {
+    padding: 4rem 8%;
+  }
+
+  #welcome img {
+    width: 8rem;
+    height: 8rem;
+  }
+
+  #welcome h2 {
+    font-size: 3rem;
+    margin: 1.5rem 0;
+  }
+
+  #latest-posts {
+    width: 90%;
+    margin: 2rem auto;
+  }
+
+  #about {
+    padding: 2rem;
+    margin-top: 3rem;
+  }
+
+  #about h2 {
+    font-size: 1.5rem;
+  }
 }
